<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/my_account_icon"
            android:title="@string/my_account" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendance_icon"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news_icon"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_rate_us"
            android:checkable="false"
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_share"
            android:checkable="false"
            android:icon="@drawable/share_icon"
            android:title="@string/share" />


        <item
            android:id="@+id/nav_log_out"
            android:checkable="false"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />

    </group>


</menu>